[package]
name = "online_judge"
version = "0.1.0"
authors = ["slhmy <1484836413@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.14.2"
actix-web = "3.0.2"
actix-rt = "1.0.0"
actix-session = "0.4.0"
actix = "0.9.0"
listenfd = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.115"
serde_json = "1.0.57"
dotenv = "0.15"
env_logger = "0.7.1"
sha2 = "0.9.1"
digest = "0.9.0"
hex = "0.4.2"
lazy_static = "1.4.0"
