[package]
name = "online_judge"
version = "0.3.0"
authors = ["slhmy <1484836413@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.14.2"
actix-web = "3.0.2"
actix-rt = "1.0.0"
actix-identity = "0.3.1"
actix-cors = "0.4.1"
actix = "0.10.0"
listenfd = "0.3"

serde = "1.0"
serde_derive = "1.0.115"
serde_json = "1.0.57"

dotenv = "0.15"
env_logger = "0.7.1"
log = "0.4.0"
pretty_env_logger = "0.4.0"
sha2 = "0.9.1"
sha-1 = "0.9.1"
md-5 = "0.9.1"
hex-literal = "0.3.1"
hmac = "0.10.1"
base64 = "0.13.0"
digest = "0.9.0"
hex = "0.4.2"
lazy_static = "1.4.0"
diesel = { version = "1.4.4", features = ["postgres", "chrono", "uuidv07"] }
thiserror = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
argon2rs = "0.2"
time = "0.2"
regex = "1.4.1"
percent-encoding = "2.1.0"
rand = "0.7.3"
http = "0.2.1"
futures = "0.3.7"
casbin = "2.0.2"
actix-http = "2.1.0"
atoi = "0.3.3"
csv = "1.1.4"